--- a/App/testlogin/pubspec.yaml
+++ b/App/testlogin/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   http: ^0.12.0+4
   bordered_text: ^1.0.0
   dio: ^3.0.9
-
+  shared_preferences: ^0.5.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
